force-app/main/default/objects/PublicationBodacc__c/PublicationBodacc__c.object-meta.xml
<CustomObject>
    <description>Liste des publications au Bodacc de l&apos;entreprise.</description>
    <label>Publication Bodacc</label>
    <nameField>
        <label>Publication BODACC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Bodaccs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>