force-app/main/default/objects/PublicationBodacc__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Publication Bodaccs</relationshipLabel>
    <relationshipName>PublicationBodaccs</relationshipName>
    <type>Lookup</type>
</CustomField>