force-app/main/default/objects/PublicationBodacc__c/fields/DateDePublication__c.field-meta.xml
<CustomField>
    <fullName>DateDePublication__c</fullName>
    <label>Date de Publication</label>
    <type>Date</type>
</CustomField>