force-app/main/default/objects/PublicationBodacc__c/fields/Desription__c.field-meta.xml
<CustomField>
    <fullName>Desription__c</fullName>
    <label>Desription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>