force-app/main/default/objects/PublicationBodacc__c/fields/LienPublication__c.field-meta.xml
<CustomField>
    <fullName>LienPublication__c</fullName>
    <label>Lien Publication</label>
    <type>Url</type>
</CustomField>