force-app/main/default/objects/PublicationBodacc__c/fields/Ref_BODACC__c.field-meta.xml
<CustomField>
    <fullName>Ref_BODACC__c</fullName>
    <label>Ref BODACC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>